# smarter-dev

./: .env.example  CLAUDE.md  Dockerfile.web.alt  app.development.yaml  app.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0ee3e9c6d226_add_announcement_tracking_to_daily_.py  14fccf6b9b7b_add_suggested_queries_to_scan_user_profiles.py  1d910521045d_add_profiling_opt_out_columns.py  a1b2c3d4e5f6_add_profiling_opt_out_columns.py  e6f7g8h9i0j1_add_token_tracking_to_research_sessions.py  f7g8h9i0j1k2_add_cost_tracking_to_research_sessions.py  g8h9i0j1k2l3_add_scan_user_profiles_table.py  h9i0j1k2l3m4_add_technologies_to_scan_user_profiles.py  i0j1k2l3m4n5_add_scan_service_usage_table.py  j1k2l3m4n5o6_add_slug_and_recent_queries.py
k8s/: deploy-bot.yaml  deploy.yaml  hpa.yaml  secrets.template.yaml
smarter_dev/bot/: client.py
smarter_dev/bot/plugins/: quests.py
smarter_dev/bot/services/: api_client.py  challenge_service.py  quests_service.py  scheduled_message_service.py
smarter_dev/shared/: database.py
smarter_dev/web/: crud.py  models.py  research_sessions_admin.py  scan_profiles_admin.py  usage_admin.py
smarter_dev/web/admin/: views.py
smarter_dev/web/api/: app.py
smarter_dev/web/api/routers/: challenges.py  quests.py  research.py
smarter_dev/web/scan/: agent.py  citations.py  controller.py  crud.py  pricing.py  runner.py  tools.py
templates/admin/: quests_list.html  research_session_detail.html  research_sessions.html  scan_profiles.html  usage.html
themes/smarterdev/static/css/: framework.css
themes/smarterdev/static/css/components/: badges.css
themes/smarterdev/static/css/pages/: research.css
themes/smarterdev/templates/: archive-post.html  error-404.html  error.html  page-sudo-confirm.html
themes/smarterdev/templates/_partials/: masthead.html
themes/smarterdev/templates/auth/: login.html
themes/smarterdev/templates/scan/: base.html  history.html  landing.html  profile.html  result.html
